# pi-motion-detector

./: README.md  README.rst  pyproject.toml
py_motion_detector/: __init__.py  cli.py  main.py
tests/: test_cli.py  test_main.py  test_py_motion_detector.py
